Fix "Stroke" Layer Style width not to be doubled

Stroke still doesn't generate exactly the same result as in PS,
because in PS it uses a bit different way of blending (it removes
the part of the original layer, or just uses COMPOSITE_COPY).

BUG:398691